--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="semi-project">
+        
+    <wb-module deploy-name="semi-projects">
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="semi-project"/>
-        <property name="java-output-path" value="/semi-project/build/classes"/>
+                
+        <property name="java-output-path" value="/semi-projects/build/classes"/>
+        <property name="context-root" value="semi-projects"/>
+            
     </wb-module>
+    
 </project-modules>
