csBoard오류,매니저 구분
csBoard의 오류잡기 구현 시작
csBoard의 매니저 구분으로 확인하는 것 , csBoard 리플작성, 수정, 삭제, 추천하기
csBoard 리플없으면 구현안되도록,
csBoard작성자 수정, 삭제, 입력하기 구현 완료 .
매니저가 list의 부분확인하게 생성하기

--- a/src/main/webapp/navbar/nav.css
+++ b/src/main/webapp/navbar/nav.css
@@ -3,6 +3,7 @@ nav{
     height: 60px;
     position: sticky;
     width: 100%;
+   
 
 }
 ul {
@@ -47,4 +48,8 @@ li {
 }
 a {
     text-decoration-line: none;
+}
+img {
+	vertical-align : bottom;
+	display: block;
 }
