--- a/src/main/webapp/navbar/nav.css
+++ b/src/main/webapp/navbar/nav.css
@@ -6,7 +6,7 @@ nav{
    
 
 }
-ul {
+.nav-font {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -15,10 +15,10 @@ ul {
     display: flex;
 
 }
-ul>li {
+.nav-font  > .nav-li {
     width: 20%;
 }
-li {
+.nav-li {
     margin: 17px 30px 0px 15px;
     padding: 0;
     border: 0;
